<resources>
    <string name="app_name">joint15_29cm</string>

    <!--문의내용 뷰-->
    <string name="title">1:1문의내역</string>
    <string name="consulting_title">상담시간</string>
    <string name="consulting_main">평일(월 ~ 금) 10:00~17:00\n(Off-time 12:00 ~ 14:00, 토/일 공휴일 휴무)</string>
    <string name="consulting_detail">ㆍ 한 번 등록한 상담내용은 수정이 불가능합니다.\nㆍ 향후 멤버쉽 단계별 혜택 및 선정기준은 사전공지 후 변경될 수 있습\n니다.</string>
    <string name="btn_consulting">1:1문의 쓰기</string>
    <string name="empty_consulting_list">내역이 없습니다.</string>
    <string name="tools_consulting_day">2022–05–16</string>
    <string name="tools_consulting_title">회원제도문의</string>
    <string name="inquiry_no">No</string>
    <string name="inquiry_yes">Yes</string>
    <string name="tools_consulting_delete_btn">삭제</string>
    <string name="inquiry_page"><u>1</u></string>

    <!--문의하기 뷰-->
    <string name="create_title">1:1 문의내역</string>
    <string name="create_description">산업안전보건법 제 41조 시행령에 근거하여 2018년 10월 18일 부터 산업안전보건법에 따라 고객응대근로자 보호조치를 시행하고 있습니다. \n 고객응대근로자에게 폭언, 폭행 등을 하지 말아주세요.</string>
    <string name="create_purchasetitle">구매관련문의</string>
    <string name="create_purchasedelivery">배송문의</string>
    <string name="create_purchaseorder">주문문의</string>
    <string name="create_purchasecancel">취소문의</string>
    <string name="create_purchasereturn">반품문의</string>
    <string name="create_purchaseexchange">교환문의</string>
    <string name="create_purchaserefund">환불문의</string>
    <string name="create_purchasegift">사은품문의</string>
    <string name="create_purchasedeposit">입금문의</string>
    <string name="create_defaulttitle">일반상담문의</string>
    <string name="create_defaultuserinfo">회원정보문의</string>
    <string name="create_defaultuserrule">회원제도문의</string>
    <string name="create_defaultpurchaseinfo">결제방법문의</string>
    <string name="create_defaultitem">상품문의</string>
    <string name="create_defaultchosen">당첨문의</string>
    <string name="create_defaultcoupon">쿠폰/마일리지문의</string>
    <string name="create_etctitle">기타문의</string>
    <string name="create_etcsystem">시스템문의</string>
    <string name="create_etcetc">기타문의</string>
    <string name="create_etcdocument">증빙서류문의</string>
    <string name="create_ordernumber">주문번호</string>
    <string name="create_itemname">상품명</string>
    <string name="create_orderdate">주문일자</string>
    <string name="create_purchasemethod">결제방법</string>
    <string name="create_name">성명</string>
    <string name="create_id">아이디</string>
    <string name="create_email">이메일</string>
    <string name="create_changeemail">이메일 변경하기</string>
    <string name="create_asktitlehint">제목을 입력하세요.</string>
    <string name="create_askcontenthint">내용을 입력하세요.</string>
    <string name="create_getemail">이메일 받기</string>
    <string name="create_caution1">상품 불량 및 오배송의 경우, 해당 제품 사진을 등록 부탁드립니다.</string>
    <string name="create_caution2">파일명은 영문만 가능하며, 파일당 최대 10MB의 용량 제한이 있습니다.</string>
    <string name="create_caution3">가로사이즈가 450pixel을 초과하는 경우 자동으로 450픽셀로 조정됩니다.</string>
    <string name="create_caution4">첨부파일은 최대 2개까지 등록가능합니다.</string>
    <string name="create_registerbutton">등록하기</string>
    <string name="create_username">김주연</string>
    <string name="create_userid">"tina1705@naver.com"</string>
    <string name="create_useremail">"tina1705@naver.com"</string>
    <!--다이얼로그 뷰-->
    <string name="create_register">등록되었습니다.</string>
    <string name="create_ok">확인</string>
    <string name="read_delete">문의글을 삭제 하시겠습니까?</string>
    <string name="read_ok">확인</string>
    <string name="read_cancel">취소</string>
    <string name="create_optionmsg">문의유형을 선택해주세요.</string>
    <string name="create_titlemsg">제목을 입력해주세요.</string>
    <string name="create_contentmsg">내용을 입력해주세요.</string>


</resources>