<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.zyoung.CreateActivity">

    <include
        android:id="@+id/include"
        layout="@layout/inquiry_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/include">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_create_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/notosanskr_medium"
                android:lineHeight="27dp"
                android:text="@string/create_title"
                android:textColor="@color/black01_29cm"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_create_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="27dp"
                android:fontFamily="@font/notosanskr_regular"
                android:lineHeight="24dp"
                android:text="@string/create_description"
                android:textColor="@color/grey01_29cm"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/tv_create_title" />

            <View
                android:id="@+id/view_create_divisor1"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="20dp"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tv_create_description" />

            <TextView
                android:id="@+id/tv_create_purchaseinfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="19dp"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/notosanskr_medium"
                android:lineHeight="27dp"
                android:text="@string/create_purchasetitle"
                android:textColor="@color/black02_29cm"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_create_divisor1" />

               <RadioGroup
                   android:id="@+id/radiogroup_create_purchase"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="19dp"
                   android:layout_marginTop="14dp"
                   android:orientation="vertical"
                   app:layout_constraintTop_toBottomOf="@id/tv_create_purchaseinfo">

                   <RelativeLayout
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/radiobutton_create_delivery"
                        android:layout_width="wrap_content"
                        android:layout_height="19dp"
                        android:button="@null"
                        android:drawableStart="@drawable/create_button_background"
                        android:text="@string/create_purchasedelivery"
                        android:fontFamily="@font/notosanskr_regular"
                        android:textSize="11sp"

                        android:background="@android:color/transparent"/>
                    <RadioButton
                        android:id="@+id/radiobutton_create_order"
                        android:layout_width="wrap_content"
                        android:layout_height="19dp"
                        android:button="@null"
                        android:layout_toEndOf="@id/radiobutton_create_delivery"
                        android:drawableStart="@drawable/create_button_background"
                        android:fontFamily="@font/notosanskr_regular"
                        android:text="@string/create_purchaseorder"
                        android:textSize="11sp"
                        android:background="@android:color/transparent"/>
                    <RadioButton
                        android:id="@+id/radiobutton_create_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="19dp"
                        android:button="@null"
                        android:layout_toEndOf="@id/radiobutton_create_order"
                        android:drawableStart="@drawable/create_button_background"
                        android:fontFamily="@font/notosanskr_regular"
                        android:text="@string/create_purchasecancel"
                        android:textSize="11sp"

                        android:background="@android:color/transparent"/>
                   </RelativeLayout>

                   <RelativeLayout
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:orientation="horizontal">
                       <RadioButton
                           android:id="@+id/radiobutton_create_return"
                           android:layout_width="wrap_content"
                           android:layout_height="19dp"
                           android:button="@null"
                           android:drawableStart="@drawable/create_button_background"
                           android:text="@string/create_purchasereturn"
                           android:fontFamily="@font/notosanskr_regular"
                           android:textSize="11sp"

                           android:background="@android:color/transparent"/>
                       <RadioButton
                           android:id="@+id/radiobutton_create_exchange"
                           android:layout_width="wrap_content"
                           android:layout_height="19dp"
                           android:button="@null"
                           android:layout_toEndOf="@id/radiobutton_create_return"
                           android:drawableStart="@drawable/create_button_background"
                           android:fontFamily="@font/notosanskr_regular"
                           android:text="@string/create_purchaseexchange"
                           android:textSize="11sp"
                           android:background="@android:color/transparent"/>
                       <RadioButton
                           android:id="@+id/radiobutton_create_refund"
                           android:layout_width="wrap_content"
                           android:layout_height="19dp"
                           android:button="@null"
                           android:layout_toEndOf="@id/radiobutton_create_exchange"
                           android:drawableStart="@drawable/create_button_background"
                           android:fontFamily="@font/notosanskr_regular"
                           android:text="@string/create_purchaserefund"
                           android:textSize="11sp"

                           android:background="@android:color/transparent"/>
                   </RelativeLayout>
                   <RelativeLayout
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:orientation="horizontal">
                       <RadioButton
                           android:id="@+id/radiobutton_create_gift"
                           android:layout_width="wrap_content"
                           android:layout_height="19dp"
                           android:button="@null"
                           android:drawableStart="@drawable/create_button_background"
                           android:text="@string/create_purchasegift"
                           android:fontFamily="@font/notosanskr_regular"
                           android:textSize="11sp"
                           android:background="@android:color/transparent"/>
                       <RadioButton
                           android:id="@+id/radiobutton_create_deposit"
                           android:layout_width="wrap_content"
                           android:layout_height="19dp"
                           android:button="@null"
                           android:layout_toEndOf="@id/radiobutton_create_gift"
                           android:drawableStart="@drawable/create_button_background"
                           android:fontFamily="@font/notosanskr_regular"
                           android:text="@string/create_purchasedeposit"
                           android:textSize="11sp"
                           android:background="@android:color/transparent"/>

                   </RelativeLayout>
               </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
