<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_29cm"
    tools:context=".feature.mino.ReadActivity">

    <include
        android:id="@+id/include"
        layout="@layout/inquiry_toolbar" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/app_horizontal_padding"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_38"
            android:text="@string/title"
            android:textAppearance="@style/Widget.GlobalTextView.Appearance_Noto_18_Medium"
            app:layout_constraintTop_toBottomOf="@+id/include" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_43"
            android:text="@string/consulting_main"
            android:textAppearance="@style/Widget.GlobalTextView.Appearance_Noto_12_Regular_Black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:lineHeight="15dp"
            android:text="@string/consulting_detail"
            android:textAppearance="@style/Widget.GlobalTextView.Appearance_Noto_11_Regular_Grey"
            tools:ignore="UnusedAttribute" />

        <Button
            style="@style/Widget.ConsultingButton.Style_Noto_12_Regular_White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_consulting" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_empty"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/empty_consulting_list"
        android:textAppearance="@style/Widget.GlobalTextView.Appearance_Noto_13_Regular"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/tabLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_consulting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/tabLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:listitem="@layout/item_consulting_recyclerview" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/rv_consulting"
        app:tabIndicatorAnimationMode="fade"
        app:tabIndicatorFullWidth="false"
        app:tabIndicatorHeight="1dp"
        app:tabRippleColor="@android:color/transparent"
        app:tabTextAppearance="@style/Widget.GlobalTextView.Appearance_Neo_20_Bold">
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1" />
    </com.google.android.material.tabs.TabLayout>
</androidx.constraintlayout.widget.ConstraintLayout>