<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_read_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="70dp"
        android:fontFamily="@font/notosanskr_medium"
        android:text="@string/read_delete"
        android:textColor="@color/black02_29cm"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_read_btncancel"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="38dp"
        android:background="@drawable/rectangle_dialog_button_background"
        android:backgroundTint="@color/black01_29cm"
        android:fontFamily="@font/notosanskr_medium"
        android:paddingStart="60dp"
        android:paddingTop="17dp"
        android:paddingEnd="60dp"
        android:paddingBottom="17dp"
        android:text="@string/read_cancel"
        android:textColor="@color/grey01_29cm"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_read_btnok"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_read_delete"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/tv_read_btnok"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_dialog_button_background"
        android:backgroundTint="@color/black01_29cm"
        android:paddingStart="60dp"
        android:paddingTop="17dp"
        android:paddingEnd="60dp"
        android:paddingBottom="17dp"
        android:text="@string/read_ok"
        android:textColor="@color/white_29cm"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_read_btncancel"
        app:layout_constraintTop_toTopOf="@+id/tv_read_btncancel" />
</androidx.constraintlayout.widget.ConstraintLayout>